// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom className 1`] = `
<div
  className="Pinpoint Loader custom-test"
>
  <div
    className="inner"
  />
</div>
`;

exports[`Test default 1`] = `
<div
  className="Pinpoint Loader "
>
  <div
    className="inner"
  />
</div>
`;
